@@ -8,9 +8,6 @@
 # Prevent execution by ld.so
 deny_audit pattern=ld_so all
 
-# Don't allow LD_PRELOAD
-deny_audit pattern=ld_preload all
-
 # We have to carve out an exception for the system updaters
 # or things go very bad (deadlock).
 allow exe=/usr/bin/rpm all
